src/snapshots/claptrap__tests__arg__ignore_case_multi.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_option=('TeSt123' 'teST123' 'tESt321')
