src/snapshots/claptrap__tests__arg__long-2.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_4f561907'
[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

[1m[4mOptions:[0m
      [1m--mode[0m <MODE>
          Speed configuration

          Possible values:
          - [1mfast[0m
          - [1mslow[0m: slower than fast
          
          [default: fast]

  [1m-h[0m, [1m--help[0m
          Print help (see a summary with '-h')
EOF_4f561907
exit 0
